# tgpu

./: .gitignore  Cargo.toml  README.en.md  README.md  README.zh.md  moltenvk
examples/egui_graph/: Cargo.toml
examples/egui_graph/src/: main.rs
examples/matmul/: Cargo.toml
examples/matmul/src/: main.rs  shader.slang
examples/particles/: Cargo.toml
examples/particles/src/: main.rs  shader.slang
examples/particles_gpugraph/: Cargo.toml
examples/particles_gpugraph/src/: main.rs  shader.slang
examples/simple_buffer_triangle/: Cargo.toml
examples/simple_buffer_triangle/src/: main.rs
examples/triangle/: Cargo.toml
examples/triangle/src/: main.rs
scripts/: install-slangc.sh
tests/: simple.slang
tgpu/: Cargo.toml
tgpu/src/: adapter.rs  allocations.rs  bindless.rs  buffer.rs  command.rs  debug.rs  descriptor.rs  descriptor2.rs  device.rs  egui.rs  freelist.rs  image.rs  instance.rs  lib.rs  pipeline.rs  queue.rs  render_graph.rs  resource.rs  shader.rs  swapchain.rs  sync.rs
