[workspace]
resolver = "3"
members = ["examples/particles", "examples/triangle", "tgpu" ] 

[workspace.dependencies]
ash = { version = "0.38", features = [ "debug", "loaded", "std" ] }
ash-window = "0.13.0"
raw-window-handle = "0.6.2"
vk-mem = "0.4.0"
naga = { version = "25.0.1", features = [ "wgsl-in", "spv-out" ] }
parking_lot = "0.12.3"
winit = { version = "0.30.5" }
log = "0.4.27"
bitflags = "2.9.0"
bytemuck =  { version = "1.22.0", features = [ "derive" ] }
