[package]
name = "egui_graph"
version = "0.1.0"
edition = "2024"

[dependencies]
tgpu = { version = "*", path = "../../tgpu", features = ["egui"] }
winit = { workspace = true }
raw-window-handle = { workspace = true }
log = { workspace = true }
env_logger = "0.11.8"
bytemuck = { workspace = true, features = ["derive"] }
