[package]
name = "matmul"
version = "0.1.0"
edition = "2024"

[dependencies]
tgpu = { version = "*", path = "../../tgpu" }
winit = { workspace = true }
raw-window-handle = { workspace = true }
log = { workspace = true }
env_logger = "0.11.8"
bytemuck = { version = "1.20.0", features = ["derive"] }
rand = "0.9.2"
